k8s/manifesto/webserver-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        imagePullPolicy: Never
        image: flask-app:latest
        ports:
        - containerPort: 5000
