k8s/manifesto/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: flask-monitoring
spec:
  selector:
    app: app
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
    - name: metrics
      protocol: TCP
      port: 9999
      targetPort: 9999
  type: ClusterIP
