k8s/manifesto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: example-ingress
    # annotations:
    #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: desafio.operacoes.xablau
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                    number: 5000
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                    number: 9999
